<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/skyne"
    android:layout_height="match_parent"
    tools:context="com.example.admin.saliteostask2.LginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/wallpapers"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/black"
        android:layout_marginTop="168dp"
        android:id="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/edittextd"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/amaas" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout4"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/black"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="0dp"
        android:id="@+id/textInputLayout5">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edittextc"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/pass" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout5"
        android:layout_marginTop="47dp"
        android:background="@drawable/round"
        android:text="@string/logge"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>
